Thu May  3 18:16:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (wsock_init): Rename `was_in_progress' to `wsock_started'
	for clearness.

Thu May  3 10:44:16 2001  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (handle_exceptions): Break out of "loop" if the
	debugger doesn't seem to be attaching to our process.

Wed May  2 20:18:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* autoload.cc: Use new definition of LoadDLLinitfunc throughout.
	Redefine wrapper for wsock32.dll and ws2_32.dll.
	(std_dll_init): New function.
	* autoload.h: Rename LoadDLLinitfunc to LoadDLLinitfuncdef.
	Add new defines LoadDLLinitfunc and LoadDLLstdfunc.
	* net.cc (wsock_init): Add guard variable handling. Take care
	to call WSAStartup only once. Load WSAStartup without using
	autoload wrapper to eliminate recursion.  Eliminate FIONBIO
	and srandom stuff.

Tue May  1 01:26:15 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (mount_info::conv_to_win32_path): More path tweaking.

Tue May  1 00:34:46 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (mount_info::conv_to_win32_path): Fix debugging output to
	avoid a SIGSEGV.  Avoid double backslashes in middle of filename.

Mon Apr 30 21:51:14 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (mkrelpath): New function.
	(mount_info::conv_to_win32_path): Eliminate now-unneeded relative path
	name arg and processing.
	(path_conv::check): Accomodate relative path names again.  Accomodate
	one extra argument in mount_info::conv_to_win32_path.  Tack trailing
	slash on end of relative path as a side effect, like before.
	* shared_info.h (mount_info::conv_to_win32_path): Reflect new argument
	ordering.

Mon Apr 30 22:09:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* autoload.cc: Add LoadDLLinitfunc for secur32.dll.
	Add LoadDLLfuncEx statements for AllocateLocallyUniqueId@4,
	DuplicateTokenEx@24, LsaNtStatusToWinError@4, 
	LsaDeregisterLogonProcess@4, LsaFreeReturnBuffer@4,